# kustomize-synthesizer

./: CLAUDE.md  Cargo.toml
src/: lib.rs  render.rs  synthesizer_core_impl.rs  types.rs
tests/: exhaustive_proofs.rs  synthesizer_core_conformance.rs  yaml_validation.rs
